--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1> William Vasquez</h1>
-  <h2> Esto es Main Branch!!!</h2>
+  <h2> Esto es la RAMA 1!!!</h2>
 </body>
 </html>
