--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1> William Vasquez</h1>
-  <h2> Esto sera un conflicto!!!</h2>
+  <h2> Esto sera un conflicto 2!!!</h2>
 </body>
 </html>
